examples/rejected/fixpoint_floor_wrong.urdr
# FALSE (floor_int rounds toward zero, D9 s2): floor_int rounds toward -inf, never toward zero.
# floor_int(-7*2^32 - 2^31) = floor(-7.5) = -8, NOT the trunc value -7. This fixture claims -7;
# correct floor_int refuses the equality (=? breach). floor is the law. floor_int is inlined.
fdiv := \fn x pairs |-> \fo(pairs, [0, x], \fn a pr |-> ?(nth(pr,0) <= nth(a,1), [nth(a,0) + nth(pr,1), nth(a,1) - nth(pr,0)], a))
p32full := [[4611686018427387904, 1073741824], [2305843009213693952, 536870912], [1152921504606846976, 268435456], [576460752303423488, 134217728], [288230376151711744, 67108864], [144115188075855872, 33554432], [72057594037927936, 16777216], [36028797018963968, 8388608], [18014398509481984, 4194304], [9007199254740992, 2097152], [4503599627370496, 1048576], [2251799813685248, 524288], [1125899906842624, 262144], [562949953421312, 131072], [281474976710656, 65536], [140737488355328, 32768], [70368744177664, 16384], [35184372088832, 8192], [17592186044416, 4096], [8796093022208, 2048], [4398046511104, 1024], [2199023255552, 512], [1099511627776, 256], [549755813888, 128], [274877906944, 64], [137438953472, 32], [68719476736, 16], [34359738368, 8], [17179869184, 4], [8589934592, 2], [4294967296, 1]]
from_int := \fn k |-> ?(k < -2147483647, =?(0, 1), ?(k > 2147483647, =?(0, 1), k * 4294967296))
neg := \fn a |-> ?(a < -9223372036854775807, =?(0, 1), 0 - a)
sub := \fn a b |-> ?(b < 0, ?(a - b < a, =?(0, 1), a - b), ?(b > 0, ?(a - b > a, =?(0, 1), a - b), a))
floor_int := \fn a |-> ?(a < -9223372036854775807, =?(0, 1), ?(a > -1, nth(fdiv(a, p32full), 0), (\fn qr |-> ?(nth(qr, 1) = 0, 0 - nth(qr, 0), 0 - nth(qr, 0) - 1))(fdiv(0 - a, p32full))))
=?(floor_int(0 - from_int(7) - 2147483648), -7)
